new: key-value memorization

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ __debug__/
 *.tmp
 *.old
 answer_generate.py
+conversation/result.json
+conversation/chat_history.json
+conversation/conversation3.json
